--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,33 @@ html {
     border-radius: 4px;
     border: 3px solid #333;
   }
+
+  .empty-state{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .checklist-icon{
+    margin-bottom: 20px;
+  }
+.empty-state_title, .empty-state_description{
+  margin-top: 20px;
+}
+
+.empty-state{
+  /*display: flex;*/
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.todo-list:empty{
+  display: none;
+}
+
+.todo-list:empty+.empty-state{
+  display: flex;
+}
