--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ html {
    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
     Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
    line-height: 1.4;
+   border-style: solid;
+   border-color: slateblue;
+   border-radius: 5%;
   }
   
   .container {
@@ -21,11 +24,12 @@ html {
     margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
-    color: #333;
+    color:rgba(12, 182, 35, 0.979);
     height: 90vh;
     margin-top: 5vh;
     margin-bottom: 5vh;
     overflow-y: auto;
+   
   }
   
   .app-title {
@@ -33,6 +37,7 @@ html {
     margin-bottom: 20px;
     font-size: 80px;
     opacity: 0.5;
+    
   }
   
   svg {
